--- a/index.css
+++ b/index.css
@@ -1,45 +1,74 @@
 *, html, body {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
+  font-family: 'Mukta', sans-serif;
 }
 
 
 .container {
-    background: hotpink;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  background-image: url(images/background.jpg);
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.adviceEye {
-    width: 300px;
-    height: 300px;
-    border-radius: 50%;
-    background: lightblue;
-    /* text-align: center; */
-    padding: 0.5em;
-    position: relative;
+.eight-ball {
+  width: 400px;
+  height: 400px;
+  border-radius: 50%;
+  background: rgb(0,0,0);
+  background: linear-gradient(45deg, rgba(0,0,0,1) 0%, rgba(85,85,85,1) 100%);
+  /* padding: 0.5em; */
+  position: relative;
+  display: flex;
+  align-content: center;
+
+}
+
+.ball-eye {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  background: white;
+  /* border: 1px solid red; */
+  /* position: absolute; */
+  top: 100px;
+  margin-top: 100px;
+  margin-left: 100px;
+  display: flex;
+
+}
+
+.eight {
+  margin: auto;
+  font-size: 130px;
 }
 
 p {
-   position: absolute;
-   top: 50%;
-   left: 50%;
-   font-weight: 700;
-   transform: translate(-50%, -50%);
-   /* border: 1px solid blue; */
-   width: 250px;
-}
-
-button {
-    border: none;
-    padding: 0.5em 1em;
-    margin: 1em;
-    border-radius: 5px;
+ position: relative;
+ font-weight: 700;
+ width: 120px;
+ margin: auto;
 }
 
 button:hover {
-    cursor: pointer;
+  cursor: pointer;
+
+}
+
+#question {
+  margin-top: 30px;
+  padding: 5px;
+  border-radius: 5px;
+  border: 1px solid gray;
+  width: 300px;
+}
+
+#submit {
+  margin-top: 30px;
+  padding: 5px;
+  border-radius: 5px;
+  border: 1px solid gray;
 }
