--- a/index.css
+++ b/index.css
@@ -1,74 +1,107 @@
-*, html, body {
+@keyframes move-eye-skew {
+  0% {
+    transform: none;
+  }
+  /* 20% {
+    transform: translateX(-68px) translateY(50px) skewX(15deg) skewY(-10deg) scale(0.95);
+  } */
+  20% {
+    transform: translateX(120px) translateY(-40px) skewX(10deg) skewY(2deg) scaleX(0.55);
+  }
+}
+
+.ball {
+  display: inline-block;
+  width: 100%;
+  height: 100%;
   margin: 0;
-  padding: 0;
-  font-family: 'Mukta', sans-serif;
-}
-
-
-.container {
-  background-image: url(images/background.jpg);
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.eight-ball {
-  width: 400px;
-  height: 400px;
   border-radius: 50%;
-  background: rgb(0,0,0);
-  background: linear-gradient(45deg, rgba(0,0,0,1) 0%, rgba(85,85,85,1) 100%);
-  /* padding: 0.5em; */
   position: relative;
-  display: flex;
-  align-content: center;
-
+  background: radial-gradient(circle at 50% 120%, #323232, #0a0a0a 80%, #000000 100%);
 }
 
-.ball-eye {
-  width: 200px;
-  height: 200px;
+.ball:before {
+  content: "";
+  position: absolute;
+  background: radial-gradient(circle at 50% 120%, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0) 70%);
+  border-radius: 50%;
+  bottom: 2.5%;
+  left: 5%;
+  opacity: 0.6;
+  height: 100%;
+  width: 90%;
+  -webkit-filter: blur(5px);
+  z-index: 2;
+}
+
+.ball:after {
+  content: "";
+  position: absolute;
+  top: 5%;
+  left: 10%;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background: radial-gradient(circle at 50% 50%, rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8) 14%, rgba(255, 255, 255, 0) 24%);
+  transform: translateX(-80px) translateY(-90px) skewX(-20deg);
+}
+
+.iris {
+  width: 40%;
+  height: 40%;
+  margin: 30%;
   border-radius: 50%;
   background: white;
-  /* border: 1px solid red; */
-  /* position: absolute; */
-  top: 100px;
-  margin-top: 100px;
-  margin-left: 100px;
-  display: flex;
-
+  transform: translateX(68px) translateY(-60px) skewX(15deg) skewY(2deg);
+  position: absolute;
+  animation: move-eye-skew 5s ease-out infinite;
+  font-size: 10px;
+}
+.iris:before {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 37.5%;
+  height: 37.5%;
+  border-radius: 50%;
+  top: 31.25%;
+  left: 31.25%;
+  background: black;
+}
+.iris:after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 31.25%;
+  height: 31.25%;
+  border-radius: 50%;
+  top: 18.75%;
+  left: 18.75%;
+  background: rgba(255, 255, 255, 0.2);
 }
 
-.eight {
-  margin: auto;
-  font-size: 130px;
+.ball .shadow {
+position: absolute;
+width: 100%;
+height: 100%;
+background: radial-gradient(circle at 50% 50%, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.1) 40%, rgba(0, 0, 0, 0) 50%);
+transform: rotateX(90deg) translateZ(-150px);
+  z-index: -1;
 }
-
-p {
- position: relative;
- font-weight: 700;
- width: 120px;
- margin: auto;
-}
-
-button:hover {
-  cursor: pointer;
-
-}
-
-#question {
-  margin-top: 30px;
-  padding: 5px;
-  border-radius: 5px;
-  border: 1px solid gray;
+.stage {
   width: 300px;
+  height: 300px;
+  display: inline-block;
+  margin: 20px;
+  perspective: 1200px;
+  perspective-origin: 50% 50%;
+  transform-style: preserve-3d;
+  transform: rotateY(0.01deg);
 }
-
-#submit {
-  margin-top: 30px;
-  padding: 5px;
-  border-radius: 5px;
-  border: 1px solid gray;
+body {
+  width: 300px;
+  margin: 20px auto;
+  background: linear-gradient(to bottom, rgba(100, 100, 100, 0.2) 0%, rgba(255, 255, 255, 0.5) 40%, #ffffff 100%);
+  background-image: url(images/background3.jpg);
+  background-repeat: no-repeat;
 }
