--- a/index.css
+++ b/index.css
@@ -195,7 +195,8 @@ transform: rotateX(90deg) translateZ(-150px);
   width: 300px;
   height: 300px;
   display: inline-block;
-  margin: 20px;
+  margin-top: 200px;
+  margin-bottom: 20px;
   perspective: 1200px;
   perspective-origin: 50% 50%;
   transform-style: preserve-3d;
